<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".petcare">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="100dp">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView

                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/logo_name"
                android:textColor="@color/coloraccent"
                android:layout_marginTop="10dp"
                android:textSize="28sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/app_name"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:elevation="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/search_text" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/search_icon" />

            </RelativeLayout>


        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center"
            android:padding="1dp"

            >

            <LinearLayout
                android:id="@+id/home2"
                android:layout_width="70dp"
                android:layout_height="46dp"
                android:layout_margin="1dp"
                android:background="@color/coloraccent"
                android:orientation="vertical"
                android:elevation="8dp"
                android:padding="1dp">

                <Button
                    android:id="@+id/home"
                    android:layout_width="120dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:text="Home"
                    android:backgroundTint="@color/coloraccent"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/petcare1"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@color/coloraccent"
                android:orientation="vertical"

                android:elevation="8dp"
                android:padding="1dp">

                <Button
                    android:id="@+id/petcare"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:backgroundTint="@color/coloraccent"
                    android:text="petcare"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold" />





            </LinearLayout>
            <LinearLayout
                android:id="@+id/category1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@color/coloraccent"
                android:orientation="vertical"

                android:elevation="8dp"
                android:padding="1dp">

                <Button
                    android:id="@+id/category"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="category"
                    android:backgroundTint="@color/coloraccent"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold" />





            </LinearLayout>
            <LinearLayout
                android:id="@+id/profile1"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@color/coloraccent"
                android:orientation="vertical"

                android:elevation="8dp"
                android:padding="1dp">

                <Button
                    android:id="@+id/profile"
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:backgroundTint="@color/coloraccent"
                    android:text="profile"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold" />





            </LinearLayout>
        </LinearLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            >
            <LinearLayout
                android:id="@+id/backgroun_gradient"
                android:layout_width="300dp"
                android:layout_height="320dp"
                android:layout_margin="15dp"
                android:background="@drawable/radius"

                android:elevation="8dp"
                android:padding="15dp">


                <ImageView
                    android:id="@+id/cateories_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/doc1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cateories_title"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/DOC1"
                        android:textAllCaps="true"
                        android:textColor="@color/background"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/categries_dis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="Dr. Nuwan Laknath is a compassionate and dedicated veterinarian committed to providing exceptional care to pets of all shapes and sizes.
With years of experience in veterinary medicine, Dr. Laknath has earned a reputation for his expertise, professionalism, and genuine love for animals."
                        android:textAllCaps="true"
                        android:textColor="@color/background"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/backgroun_gadient"
                android:layout_width="300dp"
                android:layout_height="320dp"
                android:layout_margin="15dp"
                android:background="@drawable/radius"

                android:elevation="8dp"
                android:padding="15dp">


                <ImageView
                    android:id="@+id/cateoes_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/doc3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cateies_title"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/DOC2"
                        android:textAllCaps="true"
                        android:textColor="@color/background"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/categrs_dis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="Dr. Sagara Nelum Kumara is a dedicated and compassionate veterinarian with a deep passion for animal welfare. With extensive experience in veterinary medicine, Dr. Kumara is known for his expertise, professionalism, and unwavering commitment to providing exceptional care to pets and their families."
                        android:textAllCaps="true"
                        android:textColor="@color/background"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/backgroun_gdient"
                android:layout_width="300dp"
                android:layout_height="320dp"
                android:layout_margin="15dp"
                android:background="@drawable/radius"

                android:elevation="8dp"
                android:padding="15dp">


                <ImageView
                    android:id="@+id/catries_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/doc1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cateoes_title"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Dr Nuwan Laknath"
                        android:textAllCaps="true"
                        android:textColor="@color/background"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cateies_dis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="Dr. Nuwan Laknath is a compassionate and dedicated veterinarian committed to providing exceptional care to pets of all shapes and sizes.
With years of experience in veterinary medicine, Dr. Laknath has earned a reputation for his expertise, professionalism, and genuine love for animals."
                        android:textAllCaps="true"
                        android:textColor="@color/background"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/backun_gadient"
                android:layout_width="300dp"
                android:layout_height="320dp"
                android:layout_margin="15dp"
                android:background="@drawable/radius"

                android:elevation="8dp"
                android:padding="15dp">


                <ImageView
                    android:id="@+id/caes_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/doc3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cates_title"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Dr Sagara Nelum Kumara"
                        android:textAllCaps="true"
                        android:textColor="@color/background"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cates_dis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="Dr. Sagara Nelum Kumara is a dedicated and compassionate veterinarian with a deep passion for animal welfare. With extensive experience in veterinary medicine, Dr. Kumara is known for his expertise, professionalism, and unwavering commitment to providing exceptional care to pets and their families."
                        android:textAllCaps="true"
                        android:textColor="@color/background"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
</ScrollView>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>